# task-manager-cli-cpp

./: .gitignore  API.md  CMakeLists.txt  DATABASE.md  DEPLOYMENT.md  Documentation.md  README.md  netlify.toml  render.yaml
data/: config.ini  tasks.db
gui/: TaskManagerGUI.pro
gui/src/: main_gui.cpp  mainwindow.cpp  mainwindow.h
inc/: CSVExporter.hpp  ColorUtils.hpp  ConfigHandler.hpp  DatabaseHandler.hpp  FileHandler.hpp  InputHelper.hpp  MenuHandler.hpp  SQLiteHandler.hpp  Task.hpp  TaskManager.hpp  TaskOperations.hpp
scripts/: migrate_json_to_sqlite.cpp  quick_migrate.sh  setup_database.sh  setup_sqlite.sh
src/: CSVExporter.cpp  ColorUtils.cpp  ConfigHandler.cpp  DatabaseHandler.cpp  FileHandler.cpp  InputHelper.cpp  MenuHandler.cpp  SQLiteHandler.cpp  Task.cpp  TaskManager.cpp  TaskOperations.cpp  api_server.cpp  main.cpp
tests/: README.md  test_colorutils.cpp  test_task.cpp  test_taskmanager.cpp
web/: Procfile  app.js  index.html  style.css
